[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mosaic_multigrid"
version = "4.2.0"
description = "MMG: Mosaic Multi-Grid A research-grade multi-agent gridworld environments for reproducible RL experiments"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
authors = [
    {name = "Abdulhamid Mousa", email = "abdulhamid97mousa@gmail.com"},
]
keywords = [
    "reinforcement-learning",
    "multi-agent",
    "gymnasium",
    "gridworld",
    "soccer",
    "basketball",
    "competitive",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "aenum>=1.3.0",
    "numba>=0.53.0",
    "numpy>=1.18.0",
    "gymnasium>=0.26",
    "pygame>=2.2.0",
]

[project.optional-dependencies]
rllib = ["ray[rllib]>=2.0"]
pettingzoo = ["pettingzoo>=1.22"]
dev = [
    "pytest>=7.0",
    "pytest-timeout>=2.0",
]

[project.urls]
Homepage = "https://github.com/Abdulhamid97Mousa/mosaic_multigrid"
Repository = "https://github.com/Abdulhamid97Mousa/mosaic_multigrid"

[tool.setuptools.packages.find]
include = ["mosaic_multigrid*"]

[tool.pyright]
pythonVersion = "3.9"
typeCheckingMode = "basic"
